--- a/DenzelProject/templates/main/main.html
+++ b/DenzelProject/templates/main/main.html
@@ -87,7 +87,7 @@
 </div>
 
 <!-- Top menu -->
-<div id='topMenu' class="w3-top">
+<div>
     <div class="w3-xlarge" style="max-width:1200px;margin:auto">
         <div id="stripes" class="w3-button w3-padding-16 w3-left w3-display-topleft" onclick="w3_open()">☰</div>
         {% if request.user.is_authenticated %}
@@ -95,7 +95,7 @@
                 <span class="glyphicon glyphicon-log-out "></span>
             </a>
         {% endif %}
-        <h1 class="w3-center w3-display-topmiddle w3-padding-16">Denzel Washington's Fan Page</h1>
+        <h1 class="w3-center w3-display-topmiddle">Denzel Washington's Fan Page</h1>
     </div>
 </div>
 
