--- a/DenzelProject/staticfiles/css/style.css
+++ b/DenzelProject/staticfiles/css/style.css
@@ -51,6 +51,13 @@
     background-size: 100%;
 }
 
+#page404 {
+    background-image: url(../images/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+
 nav {
     color: black;
 }
