--- a/DenzelProject/templates/page404.html
+++ b/DenzelProject/templates/page404.html
@@ -4,13 +4,9 @@
     <body id="page404">
         <header style="opacity: 0.5; width: 100%; padding: 10px;" class="w3-container w3-center w3-display-middle"
                 style="padding:128px 16px">
-            <h1 class="w3-margin w3-jumbo">HTTP: 404</h1>
-            <h1 class="w3-margin w3-jumbo">We can't find that page</h1>
-            <a style="font-size: 50px;" href="{% url 'posts' %}">Home</a>
+            <h1 style="color:white" class="w3-margin w3-jumbo">HTTP: 404</h1>
+            <h1 style="color:white" class="w3-margin w3-jumbo">We can't find that page</h1>
+            <a style="font-size: 50px; color:white" href="{% url 'posts' %}">Home</a>
         </header>
     </body>
-<script>
-    document.querySelector('#topMenu h1').style.color = 'black'
-    document.querySelector('#backArrow').style.color = 'black'
-</script>
 {% endblock %}
