fixed topMenu colors

--- a/DenzelProject/templates/main/main.html
+++ b/DenzelProject/templates/main/main.html
@@ -87,7 +87,7 @@
 </div>
 
 <!-- Top menu -->
-<div>
+<div id='topMenu'>
     <div class="w3-xlarge" style="max-width:1200px;margin:auto">
         <div id="stripes" class="w3-button w3-padding-16 w3-left w3-display-topleft" onclick="w3_open()">☰</div>
         {% if request.user.is_authenticated %}
