fixed topMenu color, fixed DeletePostView

--- a/DenzelProject/templates/posts/create-post.html
+++ b/DenzelProject/templates/posts/create-post.html
@@ -13,5 +13,6 @@
     <script>
     document.querySelector('#topMenu').style.color = 'white';
     document.querySelector('#logoutBtn').style.color = 'white';
+    document.querySelector('h1').style.color = 'white';
     </script>
 {% endblock %}
