--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -74,5 +74,6 @@
     <script>
         document.querySelector('#logoutBtn').style.color = 'white';
         document.querySelector('#stripes').style.color = 'white';
+        document.querySelector('h1').style.zIndex = '1';
     </script>
 {% endblock %}
