--- a/DenzelProject/templates/main/main.html
+++ b/DenzelProject/templates/main/main.html
@@ -95,7 +95,7 @@
                 <span class="glyphicon glyphicon-log-out "></span>
             </a>
         {% endif %}
-        <h1 class="w3-center w3-display-topmiddle">Denzel Washington's Fan Page</h1>
+        <h1 style="color:black" class="w3-center w3-display-topmiddle">Denzel Washington's Fan Page</h1>
     </div>
 </div>
 
