--- a/DenzelProject/templates/posts/delete-post.html
+++ b/DenzelProject/templates/posts/delete-post.html
@@ -1,13 +1,15 @@
 {% extends 'main/mainForm.html' %}
 {% block formContent %}
-<body id="crpstpage">
-    <form style="height:600px;" class="pstForm w3-display-middle" method="POST" class="w3-container" enctype="multipart/form-data">
-        <div style="padding-top: 10px;color:white;" class="w3-container">
-          <h2 class="w3-center">Delete your story?</h2>
-        </div>
-        {{ form }}
-        {% csrf_token %}
-        <button class="w3-button w3-block w3-section w3-blue-grey w3-ripple w3-padding">Delete</button>
-    </form>
-</body>
+    <body id="crpstpage">
+        <form style="height:650px; width: 500px;" class="pstForm w3-display-bottommiddle" method="POST" class="w3-container"
+              enctype="multipart/form-data">
+            <img class="w3-display-topmiddle" style="margin-top:20px; height:200px; width: 200px;float:right" src="{{ object.image.url }}" alt="">
+            <div style="padding-top: 10px;color:white; margin-top:170px;" class="w3-container">
+                <h2 class="w3-center">Delete your story?</h2>
+            </div>
+            {{ form }}
+            {% csrf_token %}
+            <button class="w3-button w3-block w3-section w3-blue-grey w3-ripple w3-padding">Delete</button>
+        </form>
+    </body>
 {% endblock %}
