minor css fixes

--- a/DenzelProject/templates/contacts.html
+++ b/DenzelProject/templates/contacts.html
@@ -37,6 +37,9 @@
             </div>
         </div>
     </div>
-
+    <script>
+        document.querySelector('#topMenu h1').style.color = 'white'
+        document.querySelector('#logoutBtn').style.color = 'white'
+    </script>
     </body>
 {% endblock %}
