--- a/DenzelProject/templates/posts/delete-post.html
+++ b/DenzelProject/templates/posts/delete-post.html
@@ -3,7 +3,7 @@
     <body id="crpstpage">
         <form style="height:650px; width: 500px;" class="pstForm w3-display-bottommiddle" method="POST" class="w3-container"
               enctype="multipart/form-data">
-            <img class="w3-display-topmiddle" style="margin-top:20px; height:200px; width: 200px;float:right" src="{{ object.image.url }}" alt="">
+            <img class="w3-display-topmiddle" style="margin-top:20px; height:200px; width: 200px;float:right; object-fit: cover" src="{{ object.image.url }}" alt="">
             <div style="padding-top: 10px;color:white; margin-top:170px;" class="w3-container">
                 <h2 class="w3-center">Delete your story?</h2>
             </div>
