--- a/DenzelProject/templates/posts/comments.html
+++ b/DenzelProject/templates/posts/comments.html
@@ -1,5 +1,5 @@
-{% extends 'main/mainClean.html' %}
-{% block contentClean %}
+{% extends 'main/main.html' %}
+{% block content %}
     <body id="pstdet">
 
     <div style="width: 600px; padding-bottom: 350px; padding-top: 100px;" class="w3-container w3-card w3-white w3-round w3-display-middle"><br>
