--- a/DenzelProject/templates/posts/comments.html
+++ b/DenzelProject/templates/posts/comments.html
@@ -1,7 +1,13 @@
-{% extends 'main/main.html' %}
-{% block content %}
+{% extends 'main/mainClean.html' %}
+{% block contentClean %}
     <body id="pstdet">
-
+    <a id="backArrow" href="{% url 'post-details' post_pk %}" class="w3-button w3-padding-16 w3-left">
+     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-arrow-left"
+                 viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                      d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+            </svg>
+    </a>
     <div style="width: 600px; padding-bottom: 350px; padding-top: 100px;" class="w3-container w3-card w3-white w3-round w3-display-middle"><br>
 
         <div style="height:500px; margin-top: 150px;" class="w3-container w3-display-top" id="comments">
