--- a/DenzelProject/templates/dashboard.html
+++ b/DenzelProject/templates/dashboard.html
@@ -49,13 +49,13 @@
                 <div class="w3-center w3-padding-32">
                     <div class="w3-bar">
                         {% if page_obj.has_previous %}
-                            <a class="w3-bar-item w3-button w3-hover-black"
+                            <a style="margin-right: 40px;" class="w3-bar-item w3-button w3-hover-black pagination-left"
                                href="?page={{ page_obj.previous_page_number }}">«</a>
                         {% endif %}
-                        <span class="w3-bar-item w3-button w3-black">{{ page_obj.number }}</span>
+                        <span class="w3-bar-item w3-button w3-black pagination-center">{{ page_obj.number }}</span>
 
                         {% if page_obj.has_next %}
-                            <a class="w3-bar-item w3-button w3-hover-black"
+                            <a class="w3-bar-item w3-button w3-hover-black pagination-right"
                                href="?page={{ page_obj.next_page_number }}">»</a>
                         {% endif %}
                     </div>
