--- a/DenzelProject/templates/posts/create-post.html
+++ b/DenzelProject/templates/posts/create-post.html
@@ -1,5 +1,6 @@
 {% extends 'main/main.html' %}
 {% block content %}
+{% load static %}
 <body id="crpstpage">
     <form style="height:550px" method="POST" class="pstForm w3-display-middle w3-container" enctype="multipart/form-data">
         <div style="color:white" class="w3-container">
@@ -10,9 +11,5 @@
         <button class="w3-button w3-block w3-section w3-blue-grey w3-ripple w3-padding">Add</button>
     </form>
 </body>
-    <script>
-    document.querySelector('#topMenu').style.color = 'white';
-    document.querySelector('#logoutBtn').style.color = 'white';
-    document.querySelector('h1').style.color = 'white';
-    </script>
+    <script type="module" src="{% static '/javascript/topMenu/colorWhite.js'%}"></script>
 {% endblock %}
