--- a/DenzelProject/templates/posts/create-post.html
+++ b/DenzelProject/templates/posts/create-post.html
@@ -11,5 +11,11 @@
         <button class="w3-button w3-block w3-section w3-blue-grey w3-ripple w3-padding">Add</button>
     </form>
 </body>
-    <script type="module" src="{% static '/javascript/topMenu/colorWhite.js'%}"></script>
+    <script>
+        let topMenu = document.querySelector('#topMenu');
+        topMenu.querySelector('#logoutBtn').style.color = 'white';
+        topMenu.querySelector('h1').style.color = 'white';
+        topMenu.querySelector('#stripes').style.color = 'white'
+
+    </script>
 {% endblock %}
