--- a/DenzelProject/templates/contacts.html
+++ b/DenzelProject/templates/contacts.html
@@ -2,9 +2,9 @@
 {% block content %}
     <body id="contactspage">
 
-    <div style="width:100%; margin-left:20px" class="w3-content  w3-display-middle">
-        <h1 class="w3-text-grey w3-center"><b>Contact Us</b></h1>
-        <div style="margin-top: 80px; " class="w3-row">
+    <div id="contactsContainer" class="w3-display-middle">
+        <h1 class="w3-text-grey w3-center">Contact Us</h1>
+        <div id="contactRow" class="w3-row">
             <div class="w3-third">
                 <h2>
                     <i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
@@ -23,7 +23,7 @@
                     Email
                 </h2>
                 <p>
-                    denzelfans@support.com</p>
+                    r.marinkov99@gmail.com</p>
             </div>
             <div class="w3-third">
                 <h2>
