--- a/DenzelProject/templates/posts/comments.html
+++ b/DenzelProject/templates/posts/comments.html
@@ -2,15 +2,17 @@
 {% load static %}
 {% block contentClean %}
     <body id="pstdet">
+    <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="dialogBox">
+        <h1 style="color:white">Are you sure you want to delete this comment?</h1>
+        <div style="margin-left: 29%;">
+            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" value="delete" id="deleteCommentBtn">Delete</button">
+            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" id="cancelCommentBtn">Cancel</button>
+        </div>
+    </div>
+    <input id="user" value="{{ request.user.pk }}" type="hidden">
+    {%csrf_token%}"
     <div class="w3-overlay" style="cursor:pointer;" id="myOverlay"></div>
 
-    <a id="backArrow" href="{% url 'post-details' post_pk %}" class="w3-button w3-padding-16 w3-left">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-             class="bi bi-arrow-return-left" viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-                  d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
-        </svg>
-    </a>
     <div style="width: 600px; padding-bottom: 350px; padding-top: 100px;"
          class="w3-container w3-card w3-white w3-round w3-display-middle"><br>
 
@@ -19,60 +21,26 @@
                 <h2 class="w3-text-grey w3-padding-16 w3-display-top"><i
                         class="fa fa-comment fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Comments
                 </h2>
-                {% if object_list %}
-                    {% for comment in object_list %}
-                        <div class="w3-container">
-                            <input class="commentPk" type="hidden" value="{{ comment.pk }}">
-                            {% if comment.owner.pk == request.user.pk %}
-                                <div style="float:right" class="w3-dropdown-hover">
-                                    <button class="w3-button w3-ripple w3-white">&#8285;</button>
-                                    <div class="w3-dropdown-content w3-bar-block w3-border">
-                                        <a href="{% url 'post-edit-comments' comment.post_id comment.pk %}"
-                                           class="w3-bar-item w3-button editBtn">Edit</a>
-                                        <button id="deleteCommentBtn-{{post_pk}}-{{comment.pk}}" class="w3-bar-item w3-button delBtn">Delete</button>
-                                    </div>
-                                </div>
-                            {% endif %}
-                            <h5 style="display: inline-block;" class="w3-opacity">
-                                <b>{{ comment.owner.profile.get_name }}</b></h5>
-                            <h6 style="display: inline-block;" class="w3-text-teal"><i
-                                    class="fa fa-calendar fa-fw w3-margin-right"></i>{{ comment.created }}</h6>
-                            <p>{{ comment.content }}</p>
-                            <hr>
-                        </div>
-                    {% endfor %}
-                {% endif %}
+                <form method="POST" style="display:flex; flex-direction: row;" id="newCommentForm">
+                    <input placeholder="Add Comment" class="w3-input w3-border-0" type="text">
+                    <button class="w3-button w3-padding" type="submit">Submit</button>
+                </form>
+                <hr>
+                <div id="commentsContainer">
+                
+                
+                </div>
             </div>
             <div>
                 <!-- Pagination -->
-                <div class="w3-center w3-padding-32">
-                    <div class="w3-bar">
-                        {% if page_obj.has_previous %}
-                            <a class="w3-bar-item w3-button w3-hover-black"
-                               href="?page={{ page_obj.previous_page_number }}">«</a>
-                        {% endif %}
-                        <span class="w3-bar-item w3-button w3-black">{{ page_obj.number }}</span>
+                <div id="comment-pagination-container" class="w3-center w3-padding-32">
+       
 
-                        {% if page_obj.has_next %}
-                            <a class="w3-bar-item w3-button w3-hover-black"
-                               href="?page={{ page_obj.next_page_number }}">»</a>
-                        {% endif %}
-                    </div>
                 </div>
-                <form style="display: block" id="crmsgForm" method="post">
-                    {% csrf_token %}
-                    {{ form }}
-                    <p style="margin-top: 10px;">
-                        <button class="w3-button w3-black w3-padding-large" type="submit">Submit</button>
-                    </p>
-                </form>
+           
             </div>
         </div>
     </div>
     </body>
-    <script src="{% static 'javascript/confirm-delete-comment.js' %}"></script>
-    <script>
-        document.querySelector('.errorlist').style.color='black';
-        document.querySelector('form label').style.color='black';
-    </script>
+    <script type="module" src={% static 'javascript/comments.js' %}></script>
 {% endblock %}
