--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -46,11 +46,11 @@
                    class="w3-button w3-theme-d1 w3-margin-bottom"><i
                         class="fa fa-thumbs-down"></i>
                      Dislike: {{ dislikes_count }}</a>
-                <a style="padding: 8px 12px;" href="{% url 'comments' object.pk %}" type="button"
+                <button style="padding: 8px 12px;" id="showComments"
                    class="w3-button w3-theme-d2 w3-margin-bottom"><i
                         class="fa fa-comment"></i>
                      Comments: {{ comments_count }}
-                </a>
+                </button>
             {% else %}
                 <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
                         class="fa fa-thumbs-up"></i>
@@ -59,16 +59,57 @@
                         class="fa fa-thumbs-down"></i>
                      Dislikes: {{ dislikes_count }}</p>
 
-                <a style="padding: 8px 12px; margin-top: 20px;" href="{% url 'comments' object.pk %}" type="button"
+                <button style="padding: 8px 12px; margin-top: 20px;" id="showComments"
                    class="w3-button w3-theme-d2 w3-margin-bottom"><i
                         class="fa fa-comment"></i>
                      Comments: {{ comments_count }}
-                </a>
+                </button>
             {% endif %}
+        </div>
+        <div class="comments-attributes">
+            <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="deleteDialogBox">
+                <h1 style="color:white">Are you sure you want to delete this comment?</h1>
+                <div style="margin-left: 29%;">
+                    <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" value="delete" id="deleteCommentBtn">Delete</button">
+                    <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" id="cancelCommentBtn">Cancel</button>
+                </div>
+            </div>
+            <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="authDialogBox">
+                <h1 style="color:white">You aren't logged in yet. Would you like to <a href="">Log</a> in or <a href="">Register</a>?</h1>
+                <div style="margin-left: 29%;">
+                </div>
+            </div>
+            <input id="user" value="{{ request.user.pk }}" type="hidden">
+            {%csrf_token%}
+            <div class="w3-overlay" style="cursor:pointer;" id="myOverlay"></div>        
+        </div>
+        <div style="height:500px; display:none;" class="w3-container w3-display-top" id="comments">
+            <div class="w3-container w3-card w3-white w3-margin-bottom">
+                <h2 class="w3-text-grey w3-padding-16 w3-display-top"><i
+                        class="fa fa-comment fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Comments
+                </h2>
+                <form method="POST" style="display:flex; flex-direction: row;" id="newCommentForm">
+                    <input placeholder="Add Comment" class="w3-input w3-border-0" type="text">
+                    <button class="w3-button w3-padding" type="submit">Submit</button>
+                </form>
+                <hr>
+                <div id="commentsContainer">
+                
+                
+                </div>
+            </div>
+            <div>
+                <!-- Pagination -->
+                <div id="comment-pagination-container" class="w3-center w3-padding-32">
+       
+
+                </div>
+            </div>
         </div>
     </div>
 
     </body>
+    <script type="module" src={% static 'javascript/comments.js' %}></script>
 
     <script>
         document.querySelector('#logoutBtn').style.color = 'white';
