--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -2,7 +2,21 @@
 {% load static %}
 {% block content %}
     <body id="pstdet">
-
+    <div class="w3-overlay" style="cursor:pointer;" id="notMyOverlay"></div>        
+    <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="deleteDialogBox">
+        <h1 style="color:white">Are you sure you want to delete this comment?</h1>
+        <div style="margin-left: 29%;">
+            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" value="delete" id="deleteCommentBtn">Delete</button">
+            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" id="cancelCommentBtn">Cancel</button>
+        </div>
+    </div>
+    <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="authDialogBox">
+        <h1 style="color:white">You aren't logged in yet.
+            Would you like to <a href="{% url 'login' %}">Log in</a> 
+            or <a href="{% url 'create-profile' %}">Register</a>?</h1>
+        <div style="margin-left: 29%;">
+        </div>
+    </div>
     <div style="padding-top:100px; height: fit-content;"
          class="w3-container w3-card w3-white w3-round w3-display-middle"><br>
         <div class="" style="margin-top: 80px;">
@@ -67,21 +81,8 @@
             {% endif %}
         </div>
         <div class="comments-attributes">
-            <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="deleteDialogBox">
-                <h1 style="color:white">Are you sure you want to delete this comment?</h1>
-                <div style="margin-left: 29%;">
-                    <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" value="delete" id="deleteCommentBtn">Delete</button">
-                    <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" id="cancelCommentBtn">Cancel</button>
-                </div>
-            </div>
-            <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="authDialogBox">
-                <h1 style="color:white">You aren't logged in yet. Would you like to <a href="">Log</a> in or <a href="">Register</a>?</h1>
-                <div style="margin-left: 29%;">
-                </div>
-            </div>
             <input id="user" value="{{ request.user.pk }}" type="hidden">
             {%csrf_token%}
-            <div class="w3-overlay" style="cursor:pointer;" id="myOverlay"></div>        
         </div>
         <div style="height:500px; display:none;" class="w3-container w3-display-top" id="comments">
             <div class="w3-container w3-card w3-white w3-margin-bottom">
