--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -1,7 +1,7 @@
 {% extends 'main/main.html' %}
 {% load static %}
 {% block content %}
-    <body id="pstdet">
+<body id="pstdet">
     <div class="w3-overlay" style="cursor:pointer;" id="notMyOverlay"></div>        
     <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="deleteDialogBox">
         <h1 style="color:white">Are you sure you want to delete this comment?</h1>
@@ -17,104 +17,104 @@
         <div style="margin-left: 29%;">
         </div>
     </div>
-    <div style="padding-top:100px; height: fit-content;"
-         class="w3-container w3-card w3-white w3-round w3-display-middle"><br>
-        <div class="" style="margin-top: 80px;">
-            <hr class="w3-clear">
-            <img src="{% static 'images/defaultprofilepic.jpg' %}" alt="Avatar"
-                 class="w3-left w3-circle w3-margin-right"
-                 style="width:60px; object-fit:cover">
-            <span class="w3-right w3-opacity">{{ object.created }}</span>
-            <h4>{{ owner.get_name }}</h4><br>
-            <hr class="w3-clear">
-            <p>{{ object.header }}</p>
-
-            <div class="w3-display-container">
-                {% if post.image %}
-                    <img src="{{ object.image.url }}" style="width:600px; height:400px; object-fit: cover"
-                         class="w3-margin-bottom">
-                {% else %}
-                    <img style="width:500px; height:400px" class="w3-round" src="{% static 'images/target.jpg' %}"
-                         alt="{{ post.description }}">
-                {% endif %}
-                {% if owner.pk == request.user.pk %}
-                    <div style="" class="w3-dropdown-hover w3-display-topright">
-                        <button class="w3-button w3-ripple w3-black">&#8285;</button>
-                        <div class="w3-dropdown-content w3-bar-block w3-border">
-                            <a href="{% url 'edit-post' object.pk %}" class="w3-bar-item w3-button">Edit</a>
-                            <a href="{% url 'delete-post' object.pk %}" class="w3-bar-item w3-button">Delete</a>
+    <div class="comment-container">
+        <div class="comment-div"><br>
+            <div class="" style="">
+                <hr class="w3-clear">
+                <img src="{% static 'images/defaultprofilepic.jpg' %}" alt="Avatar"
+                        class="w3-left w3-circle w3-margin-right"
+                        style="width:60px; object-fit:cover">
+                <span class="w3-right w3-opacity">{{ object.created }}</span>
+                <h4>{{ owner.get_name }}</h4><br>
+                <hr class="w3-clear">
+                <p>{{ object.header }}</p>
+    
+                <div class="w3-display-container">
+                    {% if post.image %}
+                        <img src="{{ object.image.url }}" style="max-width:100%; min-height:30%; object-fit: cover"
+                                class="w3-margin-bottom">
+                    {% else %}
+                        <img style="max-width:100%; min-height:30%;" class="w3-round" src="{% static 'images/target.jpg' %}"
+                                alt="{{ post.description }}">
+                    {% endif %}
+                    {% if owner.pk == request.user.pk %}
+                        <div style="" class="w3-dropdown-hover w3-display-topright">
+                            <button class="w3-button w3-ripple w3-black">&#8285;</button>
+                            <div class="w3-dropdown-content w3-bar-block w3-border">
+                                <a href="{% url 'edit-post' object.pk %}" class="w3-bar-item w3-button">Edit</a>
+                                <a href="{% url 'delete-post' object.pk %}" class="w3-bar-item w3-button">Delete</a>
+                            </div>
                         </div>
-                    </div>
+                    {% endif %}
+                </div>
+                {% if object.description %}
+                    <p>Description:</p>
+                    <p style="overflow: auto; max-height: 150px; max-width: 500px;">{{ object.description }}</p>
+                {% endif %}
+    
+                {% if owner.pk != request.user.pk and request.user.is_authenticated %}
+                    <a href="{% url 'post-details-like' object.pk %}" type="button"
+                        class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>
+                         Like: {{ likes_count }}</a>
+                    <a href="{% url 'post-details-dislike' object.pk %}" type="button"
+                        class="w3-button w3-theme-d1 w3-margin-bottom"><i
+                            class="fa fa-thumbs-down"></i>
+                         Dislike: {{ dislikes_count }}</a>
+                    <button style="padding: 8px 12px;" id="showComments"
+                        class="w3-button w3-theme-d2 w3-margin-bottom"><i
+                            class="fa fa-comment"></i>
+                         Comments: {{ comments_count }}
+                    </button>
+                {% else %}
+                    <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
+                            class="fa fa-thumbs-up"></i>
+                         Likes: {{ likes_count }}</p>
+                    <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
+                            class="fa fa-thumbs-down"></i>
+                         Dislikes: {{ dislikes_count }}</p>
+    
+                    <button style="padding: 8px 12px; margin-top: 20px;" id="showComments"
+                        class="w3-button w3-theme-d2 w3-margin-bottom"><i
+                            class="fa fa-comment"></i>
+                         Comments: {{ comments_count }}
+                    </button>
                 {% endif %}
             </div>
-            {% if object.description %}
-                <p>Description:</p>
-                <p style="overflow: auto; max-height: 150px; max-width: 500px;">{{ object.description }}</p>
-            {% endif %}
-
-            {% if owner.pk != request.user.pk and request.user.is_authenticated %}
-                <a href="{% url 'post-details-like' object.pk %}" type="button"
-                   class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>
-                     Like: {{ likes_count }}</a>
-                <a href="{% url 'post-details-dislike' object.pk %}" type="button"
-                   class="w3-button w3-theme-d1 w3-margin-bottom"><i
-                        class="fa fa-thumbs-down"></i>
-                     Dislike: {{ dislikes_count }}</a>
-                <button style="padding: 8px 12px;" id="showComments"
-                   class="w3-button w3-theme-d2 w3-margin-bottom"><i
-                        class="fa fa-comment"></i>
-                     Comments: {{ comments_count }}
-                </button>
-            {% else %}
-                <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
-                        class="fa fa-thumbs-up"></i>
-                     Likes: {{ likes_count }}</p>
-                <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
-                        class="fa fa-thumbs-down"></i>
-                     Dislikes: {{ dislikes_count }}</p>
-
-                <button style="padding: 8px 12px; margin-top: 20px;" id="showComments"
-                   class="w3-button w3-theme-d2 w3-margin-bottom"><i
-                        class="fa fa-comment"></i>
-                     Comments: {{ comments_count }}
-                </button>
-            {% endif %}
-        </div>
-        <div class="comments-attributes">
-            <input id="user" value="{{ request.user.pk }}" type="hidden">
-            {%csrf_token%}
-        </div>
-        <div style="height:500px; display:none;" class="w3-container w3-display-top" id="comments">
-            <div class="w3-container w3-card w3-white w3-margin-bottom">
-                <h2 class="w3-text-grey w3-padding-16 w3-display-top"><i
-                        class="fa fa-comment fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Comments
-                </h2>
-                <form method="POST" style="display:flex; flex-direction: row;" id="newCommentForm">
-                    <input placeholder="Add Comment" class="w3-input w3-border-0" type="text">
-                    <button class="w3-button w3-padding" type="submit">Submit</button>
-                </form>
-                <hr>
-                <div id="commentsContainer">
-                
-                
-                </div>
+            <div class="comments-attributes">
+                <input id="user" value="{{ request.user.pk }}" type="hidden">
+                {%csrf_token%}
             </div>
-            <div>
-                <!-- Pagination -->
-                <div id="comment-pagination-container" class="w3-center w3-padding-32">
-       
-
+            <div style="height:500px; display:none;" class="w3-container w3-display-top" id="comments">
+                <div class="w3-container w3-card w3-white w3-margin-bottom">
+                    <h2 class="w3-text-grey w3-padding-16 w3-display-top"><i
+                            class="fa fa-comment fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Comments
+                    </h2>
+                    <form method="POST" style="display:flex; flex-direction: row;" id="newCommentForm">
+                        <input placeholder="Add Comment" class="w3-input w3-border-0" type="text">
+                        <button class="w3-button w3-padding" type="submit">Submit</button>
+                    </form>
+                    <hr>
+                    <div id="commentsContainer">
+                    
+                    
+                    </div>
+                </div>
+                <div>
+                    <!-- Pagination -->
+                    <div id="comment-pagination-container" class="w3-center w3-padding-32">
+            
+    
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</body>
+<script type="module" src={% static 'javascript/comments.js' %}></script>
 
-    </body>
-    <script type="module" src={% static 'javascript/comments.js' %}></script>
-
-    <script>
-        document.querySelector('#logoutBtn').style.color = 'white';
-        document.querySelector('#stripes').style.color = 'white';
-        document.querySelector('h1').style.zIndex = '1';
-    </script>
+<script>
+    document.querySelector('#logoutBtn').style.color = 'white';
+    document.querySelector('#stripes').style.color = 'white';
+    document.querySelector('h1').style.zIndex = '1';
+</script>
 {% endblock %}
