Improved WelcomePage, ProfilePages css

--- a/DenzelProject/static/css/style.css
+++ b/DenzelProject/static/css/style.css
@@ -4,6 +4,8 @@
 @import 'contacts-page.css';
 @import 'post-details-page.css';
 @import 'welcome-page.css';
+@import 'prof-details-page.css';
+
 
 
 nav {
