--- a/DenzelProject/templates/profile/edit-profile.html
+++ b/DenzelProject/templates/profile/edit-profile.html
@@ -1,5 +1,5 @@
-{% extends 'main/mainForm.html' %}
-{% block formContent %}
+{% extends 'main/main.html' %}
+{% block content %}
     <body id="reg">
     <form class="regForm2 w3-display-middle" method="POST" enctype="multipart/form-data">
         <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
