--- a/DenzelProject/templates/welcome.html
+++ b/DenzelProject/templates/welcome.html
@@ -1,22 +1,21 @@
 {% extends 'main/mainClean.html' %}
 {% block contentClean %}
     <body id="welcome">
-    <header style="margin-top: 10%" class="w3-display-container w3-center">
-        <div class="mySlides w3-animate-opacity">
-            <div class="w3-display-middle w3-padding w3-hide-small" style="width:35%">
-                <div style="width: 90%"
-                     class="w3-light-grey w3-opacity w3-hover-opacity-off w3-padding-large w3-round-large">
-                    <h1 class="w3-xlarge">Not logged in?</h1>
-                    <hr class="w3-opacity">
-                    <p>Create a profile or Log in to our website</p>
-                    <p><a href="{% url 'login' %}" class="w3-button w3-block w3-blue-grey w3-round">Login</a></p>
-                    <p><a href="{% url 'create-profile' %}" class="w3-button w3-block w3-blue-grey w3-round">Register</a></p>
+    <div class="welcome-container">
+        <div class="content-container">
+            <div class="log-content">
+                <h3>Not logged in?</h3>
+                <hr>
+                <p>Create a profile or Log in to our website</p>
+                <div class="log-btns-container">
+                    <a class="log-btn w3-blue-grey w3-button" href="{% url 'login' %}">Login</a>
+                    <a class="log-btn w3-blue-grey w3-button" href="{% url 'create-profile' %}">Register</a>
                 </div>
             </div>
+            <a id="take-tour-btn" href="{% url 'posts' %}">Take Tour <i class="fa fa-angle-right"></i></a>
         </div>
-        <a href="{% url 'posts' %}" class="w3-button w3-black w3-display-right w3-round w3-hide-small w3-hover-light-grey">Take Tour <i class="fa fa-angle-right"></i></a>
-    </header>
-    <a id="welcome-shadow" href=""></a>
+        <h1 id="header">Denzel Washington Fan Page</h1>
+    </div>
     </body>
 
 {% endblock %}
