--- a/DenzelProject/templates/posts/delete-post.html
+++ b/DenzelProject/templates/posts/delete-post.html
@@ -3,7 +3,7 @@
 {% block formContent %}
 
 <body id="crpstpage">
-    <form style="height:650px; width: 500px;" class="pstForm w3-display-bottommiddle" method="POST" class="w3-container"
+    <form class="form w3-display-bottommiddle" method="POST" class="w3-container"
         enctype="multipart/form-data">
         {% if object.image %}
             <img class="w3-display-topmiddle"
