--- a/DenzelProject/templates/posts/edit-post.html
+++ b/DenzelProject/templates/posts/edit-post.html
@@ -1,7 +1,7 @@
 {% extends 'main/mainForm.html' %}
 {% block formContent %}
 <body id="crpstpage">
-    <form style="height:600px;" class="w3-container pstForm w3-display-middle" method="POST" enctype="multipart/form-data">
+    <form class="w3-container form w3-display-middle" method="POST" enctype="multipart/form-data">
         <div style="padding-top: 10px;color:white" class="w3-container">
           <h2 class="w3-center">Edit your Denzel story</h2>
         </div>
