--- a/DenzelProject/templates/profile/change-password.html
+++ b/DenzelProject/templates/profile/change-password.html
@@ -2,7 +2,7 @@
 
 {% block formContent %}
     <body id="reg">
-    <form style="height: 290px;" method="POST" class="logForm w3-container w3-display-middle"
+    <form method="POST" class="form w3-container w3-display-middle"
           enctype="multipart/form-data">
         <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
             <h2>Change your password</h2>
