--- a/DenzelProject/templates/profile/create-profile.html
+++ b/DenzelProject/templates/profile/create-profile.html
@@ -1,7 +1,7 @@
 {% extends 'main/mainForm.html' %}
 {% block formContent %}
     <body id="reg">
-    <form style="height: 330px;" method="POST" class="regForm w3-container w3-display-middle" enctype="multipart/form-data">
+    <form method="POST" class="form w3-container w3-display-middle" enctype="multipart/form-data">
         <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
           <h2>Register</h2>
         </div>
