--- a/DenzelProject/templates/profile/delete-profile.html
+++ b/DenzelProject/templates/profile/delete-profile.html
@@ -1,7 +1,7 @@
 {% extends 'main/main.html' %}
 {% block content %}
     <body id="reg">
-    <form id="delForm" class="regForm2 w3-display-middle" method="POST" enctype="multipart/form-data">
+    <form class="form w3-display-middle" method="POST" enctype="multipart/form-data">
         <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
           <h2>Are you sure you want to delete your profile? </h2>
         </div>
