--- a/DenzelProject/static/css/post-details-page.css
+++ b/DenzelProject/static/css/post-details-page.css
@@ -5,16 +5,26 @@
     background-position: center;
 }
 
-.comment-container{
+#pst-container{
     display:flex;
     flex-direction:row;
     justify-content:center;
     padding: 0 2px;
 }
 
-.comment-div { 
-    width:30%;
-    height:100vh;
-    padding:5% 1% 0 1%;
+#pst-div { 
+    max-width:64rem;
+    height:fit-content;
+    padding:15rem 7rem 0 7rem; 
     background-color:white;
+}
+
+#pst-content {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#pst-img-container{
+    display:flex;
 }
