--- a/DenzelProject/templates/contacts.html
+++ b/DenzelProject/templates/contacts.html
@@ -1,34 +1,39 @@
 {% extends 'main/main.html' %} {% block content %}
+
 <body id="contactspage">
-  <div class="row-contactsContainer">
-    <div class="contactsContent">
-      <h1 style="align-self: center; font-size: xxx-large">Contact Us</h1>
-      <div id="contactRow">
-        <div>
-          <h2>
-            <i class="fa fa-phone fa-fw"></i>
-            Phone
-          </h2>
-          <p>001-234-5678</p>
-          <p>001-987-7654</p>
-        </div>
-        <div>
-          <h2>
-            <i class="fa fa-envelope fa-fw"></i>
-            Email
-          </h2>
-          <p>r.marinkov99@gmail.com</p>
-        </div>
-        <div>
-          <h2>
-            <i class="fa fa-map-marker fa-fw"></i>
-            Address
-          </h2>
-          <p>121 Rock Street, 21 Avenue, New</p>
-          <p>York, NY 92'103-9000</p>
+  <div style="box-shadow: 0 0 10px #000;background-color: rgba(0, 0, 0, 0.2);" class="w3-padding-large">
+
+    <div class="row-contactsContainer">
+      <div class="contactsContent">
+        <h1 style="align-self: center; font-size: xxx-large">Contact Us</h1>
+        <div id="contactRow">
+          <div>
+            <h2>
+              <i class="fa fa-phone fa-fw"></i>
+              Phone
+            </h2>
+            <p>001-234-5678</p>
+            <p>001-987-7654</p>
+          </div>
+          <div>
+            <h2>
+              <i class="fa fa-envelope fa-fw"></i>
+              Email
+            </h2>
+            <p>r.marinkov99@gmail.com</p>
+          </div>
+          <div>
+            <h2>
+              <i class="fa fa-map-marker fa-fw"></i>
+              Address
+            </h2>
+            <p>121 Rock Street, 21 Avenue, New</p>
+            <p>York, NY 92'103-9000</p>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
   <script>
     document.querySelector("#topMenu h1").style.color = "white";
