--- a/DenzelProject/templates/posts/create-post.html
+++ b/DenzelProject/templates/posts/create-post.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 <body id="crpstpage">
-    <form style="height:550px" method="POST" class="pstForm w3-display-middle w3-container" enctype="multipart/form-data">
+    <form method="POST" class="form w3-display-middle w3-container" enctype="multipart/form-data">
         <div style="color:white" class="w3-container">
           <h2 class="w3-center">Upload your Denzel story</h2>
         </div>
