--- a/DenzelProject/templates/posts/post-details.html
+++ b/DenzelProject/templates/posts/post-details.html
@@ -1,84 +1,83 @@
 {% extends 'main/main.html' %}
 {% load static %}
 {% block content %}
+
 <body id="pstdet">
-    <div class="w3-overlay" style="cursor:pointer;" id="notMyOverlay"></div>        
+    <div class="w3-overlay" style="cursor:pointer;" id="notMyOverlay"></div>
     <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="deleteDialogBox">
         <h1 style="color:white">Are you sure you want to delete this comment?</h1>
         <div style="margin-left: 29%;">
-            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" value="delete" id="deleteCommentBtn">Delete</button">
-            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" id="cancelCommentBtn">Cancel</button>
+            <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple" value="delete"
+                id="deleteCommentBtn">Delete</button">
+                <button style="display:inline-flex" class="w3-button w3-section w3-blue-grey w3-ripple"
+                    id="cancelCommentBtn">Cancel</button>
         </div>
     </div>
     <div style="display:none; z-index:5" class="w3-display-middle pstForm" id="authDialogBox">
         <h1 style="color:white">You aren't logged in yet.
-            Would you like to <a href="{% url 'login' %}">Log in</a> 
+            Would you like to <a href="{% url 'login' %}">Log in</a>
             or <a href="{% url 'create-profile' %}">Register</a>?</h1>
         <div style="margin-left: 29%;">
         </div>
     </div>
-    <div class="comment-container">
-        <div class="comment-div"><br>
-            <div class="" style="">
+    <div id="pst-container">
+        <div id="pst-div"><br>
+            <div id="pst-content">
                 <hr class="w3-clear">
                 <img src="{% static 'images/defaultprofilepic.jpg' %}" alt="Avatar"
-                        class="w3-left w3-circle w3-margin-right"
-                        style="width:60px; object-fit:cover">
+                    class="w3-left w3-circle w3-margin-right" style="width:60px; object-fit:cover">
                 <span class="w3-right w3-opacity">{{ object.created }}</span>
-                <h4>{{ owner.get_name }}</h4><br>
-                <hr class="w3-clear">
-                <p>{{ object.header }}</p>
-    
-                <div class="w3-display-container">
-                    {% if post.image %}
-                        <img src="{{ object.image.url }}" style="max-width:100%; min-height:30%; object-fit: cover"
-                                class="w3-margin-bottom">
-                    {% else %}
-                        <img style="max-width:100%; min-height:30%;" class="w3-round" src="{% static 'images/target.jpg' %}"
-                                alt="{{ post.description }}">
-                    {% endif %}
-                    {% if owner.pk == request.user.pk %}
-                        <div style="" class="w3-dropdown-hover w3-display-topright">
+                <h4>Owner: {{ owner.get_name }}</h4 <hr class="w3-clear">
+
+                <div id="pst-main-content">
+                    <p>Title: {{ object.header }}</p>
+                    <div id="pst-img-container">
+                        {% if post.image %}
+                        <img src="{{ object.image.url }}" style="width:100%; height:30%; object-fit: cover">
+                        {% else %}
+                        <img style="width:100%; height:30%;" class="w3-round"
+                            src="{% static 'images/target.jpg' %}">
+                        {% endif %}
+                        {% if owner.pk == request.user.pk %}
+                        <div class="w3-dropdown-hover">
                             <button class="w3-button w3-ripple w3-black">&#8285;</button>
                             <div class="w3-dropdown-content w3-bar-block w3-border">
                                 <a href="{% url 'edit-post' object.pk %}" class="w3-bar-item w3-button">Edit</a>
                                 <a href="{% url 'delete-post' object.pk %}" class="w3-bar-item w3-button">Delete</a>
                             </div>
                         </div>
-                    {% endif %}
-                </div>
-                {% if object.description %}
+                        {% endif %}
+                    </div>
+                    {% if object.description %}
                     <p>Description:</p>
                     <p style="overflow: auto; max-height: 150px; max-width: 500px;">{{ object.description }}</p>
-                {% endif %}
-    
-                {% if owner.pk != request.user.pk and request.user.is_authenticated %}
+                    {% endif %}
+
+                    {% if owner.pk != request.user.pk and request.user.is_authenticated %}
                     <a href="{% url 'post-details-like' object.pk %}" type="button"
                         class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>
                          Like: {{ likes_count }}</a>
                     <a href="{% url 'post-details-dislike' object.pk %}" type="button"
-                        class="w3-button w3-theme-d1 w3-margin-bottom"><i
-                            class="fa fa-thumbs-down"></i>
+                        class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-down"></i>
                          Dislike: {{ dislikes_count }}</a>
                     <button style="padding: 8px 12px;" id="showComments"
-                        class="w3-button w3-theme-d2 w3-margin-bottom"><i
-                            class="fa fa-comment"></i>
+                        class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
                          Comments: {{ comments_count }}
                     </button>
-                {% else %}
+                    {% else %}
                     <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
                             class="fa fa-thumbs-up"></i>
                          Likes: {{ likes_count }}</p>
                     <p style="padding: 8px 12px; display:inline-flex" class="w3-theme-d1 w3-margin-bottom"><i
                             class="fa fa-thumbs-down"></i>
                          Dislikes: {{ dislikes_count }}</p>
-    
+
                     <button style="padding: 8px 12px; margin-top: 20px;" id="showComments"
-                        class="w3-button w3-theme-d2 w3-margin-bottom"><i
-                            class="fa fa-comment"></i>
+                        class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
                          Comments: {{ comments_count }}
                     </button>
-                {% endif %}
+                    {% endif %}
+                </div>
             </div>
             <div class="comments-attributes">
                 <input id="user" value="{{ request.user.pk }}" type="hidden">
@@ -95,15 +94,15 @@
                     </form>
                     <hr>
                     <div id="commentsContainer">
-                    
-                    
+
+
                     </div>
                 </div>
                 <div>
                     <!-- Pagination -->
                     <div id="comment-pagination-container" class="w3-center w3-padding-32">
-            
-    
+
+
                     </div>
                 </div>
             </div>
@@ -115,6 +114,8 @@
 <script>
     document.querySelector('#logoutBtn').style.color = 'white';
     document.querySelector('#stripes').style.color = 'white';
+    document.querySelector('#heading').style.color = 'black';
+    document.querySelector('#heading').style.maxWidth = '60rem';
     document.querySelector('h1').style.zIndex = '1';
 </script>
 {% endblock %}
