--- a/DenzelProject/templates/profile/edit-profile.html
+++ b/DenzelProject/templates/profile/edit-profile.html
@@ -1,14 +1,14 @@
 {% extends 'main/main.html' %}
 {% block content %}
     <body id="reg">
-    <form class="regForm2 w3-display-middle" method="POST" enctype="multipart/form-data">
+    <form class="form w3-display-middle" method="POST" enctype="multipart/form-data">
         <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
           <h2 class="w3-center">Update your Profile Info</h2>
         </div>
         {{ form }}
         {% csrf_token %}
         <button class="w3-button w3-block w3-section w3-blue-grey w3-ripple w3-padding">Done</button>
-        <a style="color:white" class="w3-display-bottom" href="{% url 'change-password' object.pk %}">Change Password</a>
+        <a class="w3-button w3-light-grey w3-padding-large w3-section hov-btn" href="{% url 'change-password' object.pk %}">Change Password</a>
     </form>
     </body>
 
