--- a/DenzelProject/templates/profile/login.html
+++ b/DenzelProject/templates/profile/login.html
@@ -1,7 +1,7 @@
 {% extends 'main/mainForm.html' %}
 {% block formContent %}
     <body id="reg">
-    <form style="height: 290px;" method="POST" class="logForm w3-container w3-display-middle" enctype="multipart/form-data">
+    <form method="POST" class="form w3-container w3-display-middle" enctype="multipart/form-data">
         <div style="padding-top: 10px;" class="w3-container w3-blue-grey">
           <h2>Login</h2>
         </div>
